manifests/media/torrent/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: torrent
spec:
  ports:
    - name: deluge
      port: 8112
      protocol: TCP
      targetPort: 8112
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: torrent
subsets:
  - addresses:
      - ip: 10.2.3.50
        ports:
          - name: deluge
            port: 8112
            protocol: TCP
