manifests/media/torrent/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-response-headers: >-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-signin: >-
      https://torrent.sestary.eu/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    nginx.ingress.kubernetes.io/auth-url: >-
      http://ak-outpost-sestary-outpost.auth-authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
  labels:
    app.kubernetes.io/instance: torrent
    app.kubernetes.io/name: torrent
  name: torrent
spec:
  ingressClassName: nginx
  rules:
    - host: torrent.sestary.eu
      http:
        paths:
          - backend:
              service:
                name: torrent
                port:
                  number: 8112
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - torrent.sestary.eu
